[feat] picture preview ok & delete func ok & url_parse func ok

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,6 +16,25 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # 图片代理 - 解决跨域问题
+    location ~ ^/proxy-image/ {
+        resolver 8.8.8.8 8.8.4.4 valid=300s ipv4=on;
+        resolver_timeout 5s;
+        set $image_url '';
+        if ($arg_url ~ "(.+)") {
+            set $image_url $arg_url;
+        }
+        proxy_pass $image_url;
+        proxy_hide_header Set-Cookie;
+        proxy_ssl_server_name on;
+        proxy_ssl_protocols TLSv1.2 TLSv1.3;
+        proxy_buffering off;
+        proxy_set_header User-Agent "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36";
+        proxy_set_header Referer "";
+        proxy_set_header Accept "*/*";
+        add_header Access-Control-Allow-Origin * always;
+    }
+
     # 静态资源缓存
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         root /usr/share/nginx/html;
