--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       - DATABASE_URL=mysql+pymysql://${MYSQL_USER:-streamcraft}:${MYSQL_PASSWORD:-streamcraft123}@mysql:3306/${MYSQL_DATABASE:-streamcraft}
       - REDIS_URL=redis://redis:6379/0
       - SECRET_KEY=${SECRET_KEY:-your-secret-key-here}
+      - BOT_TOKEN=${BOT_TOKEN:-test-bot-token-123}
     volumes:
       - ./backend:/app
     depends_on:
